2003-05-07  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for freetype separetely and add to xlib flags
	if present.

2003-05-02  Adam Fedor  <fedor@gnu.org>

	* Documentation/Back/GNUmakefile: Remove GNUSTEP_MAKEFILES

2003-04-27  Adam Fedor  <fedor@gnu.org>

	* Updates for filesystem change.
	* GNUmakefile (GNUSTEP_MAKEFILES): Remove
	* Documentation/GNUmakefile, Source/GNUmakefile,
	Source/*/GNUmakefile, Tools/GNUmakefile: Idem
	* configure.ac: Replace $GNUSTEP_SYSTEM_ROOT/Makefiles with
	$GNUSTEP_MAKEFILES.  Replace Libraries with Library/Libraries.
	Replace Headers with Library/Headers.

2003-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/Win32FontInfo.m
	* Source/xlib/GSXftFontInfo.m
	* Source/xlib/XGFont.m
	In [setupAttributes] removed setting of fontDictionary values.
	* Source/xdps/AFMFileFontInfo.m
	Create the fontDictionary in [_setFontInfo].
	
2003-04-27 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/xpbs.m: ([xSendData:format:items:type:to:]) Fix bug
	calculating offset into data buffer.  Prevent crashing and
	provision of garbage data.

2003-04-10 12:12  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XWindowBuffer.m (-dealloc): Don't explicitly set the
	X window's background pixmap back to None.

2003-04-02 14:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/blit.h: Clean up includes.

	* Source/art/blit.m (plusd_aa): Fix calculation of alpha.

2003-03-29 19:13  Alexander Malmberg <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/blit.h, Source/art/blit.m,
	Source/art/ftfont.h, Source/art/ftfont.m: Implement rendering of
	text to buffers with destination alpha. Change the subpixel
	font rendering to override the glyph operator since it's the one
	actually being used.

2003-03-25  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/GSXftFontInfo.m: Protect 'id' when including
	fontconfig/fontconfig.h (suggestion from Pete French).
